# django-nats-client

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yaml
django_nats/: apps.py  clients.py  registry.py  utils.py
django_nats/management/commands/: nats_listener.py
nats_client/: __init__.py  apps.py  clients.py  exceptions.py  handlers.py  registry.py  types.py  utils.py
nats_client/management/commands/: nats_listener.py
tests/: settings.py  test_registry.py
